--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,7 @@
 .productos__grilla {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "filtros filtros filtros"
-   "prd1 prd2 prd3"
-   "prd4 prd5 prd6"
-   "prd7 prd8 prd9";
+    grid-template-areas: "filtros filtros filtros";
     justify-content: space-around;
     align-content: space-between;
     align-items: center;
@@ -43,7 +40,7 @@
       align-items: center;
       width: 85%;
       gap: 1rem;
-      height: 570px;
+      height: 600px;
       transition: 500ms; }
       .productos__grilla .productos img {
         object-fit: contain;
